--- a/config_files/coco.yaml
+++ b/config_files/coco.yaml
@@ -18,7 +18,7 @@ DATA:
   scale_max: 2.0
   rot_min: -10
   rot_max: 10
-  augmentations: ['hor_flip', 'vert_flip', 'resize']
+  augmentations: ['resize']
 
 TRAIN:
   ckpt_path: checkpoints/
